Make changes to test files