@@ -9,8 +9,12 @@ repositories {
 }
 
 dependencies {
+    implementation "org.openjfx:javafx-controls:17.0.2"
+    implementation "org.openjfx:javafx-fxml:17.0.2"
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    testImplementation 'org.testfx:testfx-core:4.0.16-alpha'
+    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
 }
 
 test {
@@ -18,17 +22,23 @@ test {
 
     testLogging {
         events "passed", "skipped", "failed"
-
         showExceptions true
         exceptionFormat "full"
         showCauses true
         showStackTraces true
         showStandardStreams = false
     }
+
+    jvmArgs = [
+            '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+            '--add-opens', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+    ]
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("tars.Main")
 }
 
 shadowJar {
